Fix problem with datepicker events "bleeding through" to objects behind it

--- a/www/css/application.css
+++ b/www/css/application.css
@@ -37,6 +37,12 @@ a.format-detection-no { text-decoration: none; font-weight: inherit !important; 
     padding-top: 44px !important;
 }
 
+/* datepicker is hardcoded to have a z-index of 1, which results in selects being "above" the datepicker
+*/
+.ui-datepicker {
+    z-index: 99 !important;
+}
+
 /* List Styling */
 .ui-li-desc.text-result strong { display: inline-block; margin: 0 5px 5px 0; }
 #popupDialog .ui-li-desc.text-result strong { display: block; margin: 0 5px 5px 0; }
